# suanpan

./: CHANGELOG.md  Cargo.toml  PLAN.md  PRD.md  README.md  RELEASE_CHECKLIST.md  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  commands.md  database.md  overview.md
docs/phases/: phase-01-core.md  phase-02-import.md  phase-03-analysis.md  phase-04-viz.md  phase-05-ai.md
scripts/: install.sh
skill/: SKILL.md
skill/references/: analytics.md  commands.md  management.md
src/: error.rs  lib.rs  main.rs  output.rs
src/commands/: account.rs  add.rs  category.rs  compare.rs  delete.rs  import.rs  list.rs  migrate.rs  mod.rs  remove.rs  report.rs  stats.rs  tag.rs  trend.rs  update.rs
src/db/: mod.rs  surreal.rs
src/models/: account.rs  category.rs  mod.rs  tag.rs  transaction.rs  types.rs
