[package]
name = "finance-cli"
version = "0.1.0"
edition = "2021"
authors = ["尹国冰"]
description = "个人财务管理 CLI 工具"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
surrealdb = { version = "2.2", features = ["kv-surrealkv"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde-float"] }
uuid = { version = "1.15", features = ["v4", "serde"] }
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
serde_json = "1.0"
comfy-table = "7.1"
nanoid = "0.4"
once_cell = "1.19"
tree-ds = { version = "0.1", features = ["serde"] }

[dev-dependencies]
rust_decimal_macros = "1.36"

[[bin]]
name = "finance"
path = "src/main.rs"
