[package]
name = "suanpan"
version = "0.1.0"
edition = "2021"
authors = ["尹国冰"]
description = "算盘 - 智能体时代的个人财务管理 CLI 工具"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
surrealdb = { version = "2.2", features = ["kv-surrealkv"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde-float"] }
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
serde_json = "1.0"
comfy-table = "7.1"
nanoid = "0.4"
tree-ds = { version = "0.1", features = ["serde"] }
calamine = "0.26"
plotters = "0.3"

[dev-dependencies]
rust_decimal_macros = "1.36"

[[bin]]
name = "suanpan"
path = "src/main.rs"
